--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,10 @@
 {
   "compilerOptions": {
+    "baseUrl": ".", // обязательно
+    "paths": {
+      "@/*": ["src/*"],
+      "src/*": ["src/*"]
+    },
     "target": "ES6",
     "module": "ESNext",
     "lib": ["dom", "dom.iterable", "esnext"],
